fixing external links and overflow for literature

--- a/style.css
+++ b/style.css
@@ -269,6 +269,11 @@ p {
 }
 */
 
+.tile .new-tab {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+}
 /* "NEW" badge box */
 .tile .new {
     position: absolute;
@@ -475,7 +480,7 @@ div.head {
 }
 
 .written {
-    position: relative;
+    position: static;
     height: 260px;
     overflow: hidden;
     color: #00aaff;
